ms/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote-poll
  labels:
    app.kubernetes.io/part-of: vote-poll
